<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/opcion_1"
        android:icon="@drawable/xime"
        android:title="@string/g_opcion_1"
        android:iconTint="@color/colorAccent" />
    <item android:id="@+id/opcion_2"
        android:icon="@drawable/xime"
        android:title="@string/g_opcion_2"
        android:iconTint="@color/colorAccent"/>
    <item android:id="@+id/opcion_3"
        android:icon="@drawable/xime"
        android:title="@string/g_opcion_3"
        android:iconTint="@color/colorAccent"/>
    <item android:id="@+id/opcion_4"
        android:icon="@drawable/xime"
        android:title="@string/g_opcion_4"
        android:iconTint="@color/colorAccent"

        />
    <item android:id="@+id/opcion_5"
        android:icon="@drawable/xime"
        android:title="@string/g_opcion_5"
        android:iconTint="@color/colorAccent"
        />
</menu>